<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution_tv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/result_tv"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="0"
        android:textSize="64dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:layout_above="@id/buttons_layout"
        android:layout_margin="16dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#F1F1F1"
        android:paddingVertical="16dp"
        android:id="@+id/buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_c"
                android:backgroundTint="#F44336"
                android:text="C" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_open_bracket"
                android:backgroundTint="#A1A1A1"
                android:text="(" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:backgroundTint="#A1A1A1"
                android:id="@+id/button_close_bracket"
                android:text=")" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_divide"
                android:backgroundTint="#FF9800"
                android:text="/" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_7"
                android:text="7" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_8"
                android:text="8" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_9"
                android:text="9" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_multiply"
                android:backgroundTint="#FF9800"
                android:text="*" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_4"
                android:text="4" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_5"
                android:text="5" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_6"
                android:text="6" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_plus"
                android:backgroundTint="#FF9800"
                android:text="+" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_1"
                android:text="1" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_2"
                android:text="2" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_3"
                android:text="3" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_minus"
                android:backgroundTint="#FF9800"
                android:text="-" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="20dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_ac"
                android:backgroundTint="#F44336"
                android:text="AC" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_0"
                android:text="0" />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_dot"
                android:text="." />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_equals"
                android:backgroundTint="#FF9800"
                android:text="=" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_change_sign"
                android:backgroundTint="#A1A1A1"
                android:text="±" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textSize="32dp"
                android:textColor="@color/white"
                android:layout_margin="12dp"
                android:id="@+id/button_square_root"
                android:backgroundTint="#A1A1A1"
                android:text="√" />



        </LinearLayout>


    </LinearLayout>



</RelativeLayout>